--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,12 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+iframe[src*="jotfor.ms"] {
+  bottom: 40px !important;
+  right: 40px !important;
+  position: fixed !important;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -29,11 +35,19 @@
   }
 }
 
+
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
+/* Adjust Jotform chatbot position */
+#jfFrame-0197d4eaa0dc7e088d5f526a78f0ae136326 {
+  bottom: 40px !important; /* space from bottom */
+  right: 40px !important;  /* space from right */
+}
+
 
 .card {
   padding: 2em;
